# Epitech-RType

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
client/: identifiable.cpp  keyboard_manager.cpp  main.cpp  world.cpp
client/components/: component.cpp  position_component.cpp
client/entities/: entity.cpp
client/includes/: keyboard_manager.cpp
client/ui/: core.cpp
client/ui/components/: base.cpp  text.cpp
includes/: keyboard_manager.h  resource_manager.h  rtype.h
includes/client/: identifiable.h  keyboard_manager.h  rtype.h  world.h
includes/client/components/: component.h  position_component.h
includes/client/entities/: entity.h
includes/client/systems/: system.h
includes/client/ui/: components.h  core.h
includes/client/ui/components/: box.h  button.h  loadingBar.cpp  loadingBar.h  playerLife.h
includes/lib/: enums.h  error.h  packet.h
includes/server/: server.h
lib/: CMakeLists.txt  error.cpp  packet.cpp
lib/src/: example.cpp
scripts/: build.sh  clean.sh
server/: client.cpp  game.cpp  main.cpp  server.cpp
server/commands/: tcp.cpp
src/client/: main.cpp
src/server/: main.cpp
